--- a/swagger-spec/nodes/providers_list.yaml
+++ b/swagger-spec/nodes/providers_list.yaml
@@ -1,2 +1,67 @@
 # /nodes/{node_id}/files/
 # https://api.osf.io/v2/nodes/ezcuj/files/
+get:
+  summary: List all storage providers
+  description: >-
+    List of storage providers enabled for this node.
+
+    ####Returns
+
+    Returns a JSON object containing `data` and `links` keys.
+
+    The `data` key contains an array of files.
+    Each resource in the array is a separate file object and contains the full representation of the file, meaning additional requests to a file's detail view are not necessary.
+
+    The `links` key contains a dictionary of links that can be used for [pagination](#Introduction_pagination).
+
+    In the OSF filesystem model, providers are treated as folders, but with special properties that distinguish
+    them from regular folders. Every provider folder is considered a root folder, and may not be deleted through the regular file API.
+
+  parameters:
+
+    - in: path
+      name: node_id
+      type: string
+      required: true
+      description: 'The unique identifier of the node.'
+
+  tags:
+    - Nodes
+  operationId: nodes_providers_list
+  x-response-schema: File
+  responses:
+    '200':
+      description: 'OK'
+      schema:
+        type: array
+        items:
+          $ref: '../files/definition.yaml'
+      examples:
+        application/json:
+          data:
+          - relationships:
+              files:
+                links:
+                  related:
+                    href: https://api.osf.io/v2/nodes/ezcuj/files/osfstorage/
+                    meta: {}
+            links:
+              storage_addons: https://api.osf.io/v2/addons/?filter%5Bcategories%5D=storage
+              upload: https://files.osf.io/v1/resources/ezcuj/providers/osfstorage/
+              new_folder: https://files.osf.io/v1/resources/ezcuj/providers/osfstorage/?kind=folder
+            attributes:
+              node: ezcuj
+              path: "/"
+              kind: folder
+              name: osfstorage
+              provider: osfstorage
+            type: files
+            id: ezcuj:osfstorage
+          links:
+            first: null
+            last: null
+            prev: null
+            next: null
+            meta: null
+              total: 1
+              per_page: 10
