--- a/swagger-spec/view_only_links/nodes.yaml
+++ b/swagger-spec/view_only_links/nodes.yaml
@@ -51,122 +51,370 @@ get:
                 files:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/files/
+                      href: https://api.osf.io/v2/nodes/bifc7/files/
                       meta: {}
                 view_only_links:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/view_only_links/
+                      href: https://api.osf.io/v2/nodes/bifc7/view_only_links/
                       meta: {}
                 citation:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/citation/
+                      href: https://api.osf.io/v2/nodes/bifc7/citation/
                       meta: {}
                 draft_registrations:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/draft_registrations/
+                      href: https://api.osf.io/v2/nodes/bifc7/draft_registrations/
                       meta: {}
                 contributors:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/contributors/
+                      href: https://api.osf.io/v2/nodes/bifc7/contributors/
                       meta: {}
                 forks:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/forks/
+                      href: https://api.osf.io/v2/nodes/bifc7/forks/
                       meta: {}
                 root:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/
+                      href: https://api.osf.io/v2/nodes/bifc7/
                       meta: {}
                 identifiers:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/identifiers/
+                      href: https://api.osf.io/v2/nodes/bifc7/identifiers/
                       meta: {}
                 comments:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/comments/?filter%5Btarget%5D=gaz5n
+                      href: https://api.osf.io/v2/nodes/bifc7/comments/?filter%5Btarget%5D=bifc7
                       meta: {}
                 registrations:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/registrations/
+                      href: https://api.osf.io/v2/nodes/bifc7/registrations/
                       meta: {}
                 node_links:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/node_links/
+                      href: https://api.osf.io/v2/nodes/bifc7/node_links/
                       meta: {}
                 linked_nodes:
                   links:
                     self:
-                      href: http://api.osf.io/v2/nodes/gaz5n/relationships/linked_nodes/
+                      href: https://api.osf.io/v2/nodes/bifc7/relationships/linked_nodes/
                       meta: {}
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/linked_nodes/
+                      href: https://api.osf.io/v2/nodes/bifc7/linked_nodes/
                       meta: {}
                 wikis:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/wikis/
+                      href: https://api.osf.io/v2/nodes/bifc7/wikis/
                       meta: {}
                 affiliated_institutions:
                   links:
                     self:
-                      href: http://api.osf.io/v2/nodes/gaz5n/relationships/institutions/
+                      href: https://api.osf.io/v2/nodes/bifc7/relationships/institutions/
                       meta: {}
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/institutions/
+                      href: https://api.osf.io/v2/nodes/bifc7/institutions/
                       meta: {}
                 children:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/children/
+                      href: https://api.osf.io/v2/nodes/bifc7/children/
                       meta: {}
                 preprints:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/preprints/
+                      href: https://api.osf.io/v2/nodes/bifc7/preprints/
                       meta: {}
                 logs:
                   links:
                     related:
-                      href: http://api.osf.io/v2/nodes/gaz5n/logs/
+                      href: https://api.osf.io/v2/nodes/bifc7/logs/
                       meta: {}
               links:
-                self: http://api.osf.io/v2/nodes/gaz5n/
-                html: http://osf.io/gaz5n/
+                self: https://api.osf.io/v2/nodes/bifc7/
+                html: https://osf.io/bifc7/
               attributes:
                 category: project
                 fork: false
                 preprint: false
-                description: 'Project description'
+                description: 'This is an independent replication as part of the Reproducibility
+                  Project: Psychology.'
                 current_user_permissions:
                 - read
-                - write
-                - admin
-                date_modified: '2017-03-20T20:13:30.599144'
-                title: 'Fantastic project title'
+                date_modified: '2017-03-03T05:00:31.512000'
+                title: Replication of WA Cunningham, JJ Van Bavel, IR Johnsen (2008, PS 19(2))
                 collection: false
                 registration: false
-                date_created: '2017-03-20T20:12:17.002426'
-                current_user_can_comment: true
+                date_created: '2014-07-28T13:53:04.508000'
+                current_user_can_comment: false
                 node_license:
-                public: false
+                public: true
                 tags: []
               type: nodes
-              id: gaz5n
+              id: bifc7
+            - relationships:
+                files:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/files/
+                      meta: {}
+                view_only_links:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/view_only_links/
+                      meta: {}
+                citation:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/citation/
+                      meta: {}
+                license:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/licenses/563c1cf88c5e4a3877f9e96a/
+                      meta: {}
+                contributors:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/contributors/
+                      meta: {}
+                forks:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/forks/
+                      meta: {}
+                root:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/
+                      meta: {}
+                identifiers:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/identifiers/
+                      meta: {}
+                forked_from:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/kxhz5/
+                      meta: {}
+                comments:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/comments/?filter%5Btarget%5D=73pnd
+                      meta: {}
+                registrations:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/registrations/
+                      meta: {}
+                logs:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/logs/
+                      meta: {}
+                node_links:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/node_links/
+                      meta: {}
+                linked_nodes:
+                  links:
+                    self:
+                      href: https://api.osf.io/v2/nodes/73pnd/relationships/linked_nodes/
+                      meta: {}
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/linked_nodes/
+                      meta: {}
+                wikis:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/wikis/
+                      meta: {}
+                affiliated_institutions:
+                  links:
+                    self:
+                      href: https://api.osf.io/v2/nodes/73pnd/relationships/institutions/
+                      meta: {}
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/institutions/
+                      meta: {}
+                children:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/children/
+                      meta: {}
+                preprints:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/preprints/
+                      meta: {}
+                draft_registrations:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/73pnd/draft_registrations/
+                      meta: {}
+              links:
+                self: https://api.osf.io/v2/nodes/73pnd/
+                html: https://osf.io/73pnd/
+              attributes:
+                category: project
+                fork: true
+                preprint: false
+                description:
+                current_user_permissions:
+                - read
+                date_modified: '2016-10-02T19:50:23.605000'
+                title: Replication of Hajcak &amp; Foti (2008, PS, Study 1)
+                collection: false
+                registration: false
+                date_created: '2012-10-31T18:50:46.111000'
+                current_user_can_comment: false
+                node_license:
+                  copyright_holders:
+                  - ''
+                  year: '2016'
+                public: true
+                tags:
+                - anxiety
+                - EMG
+                - EEG
+                - motivation
+                - ERN
+              type: nodes
+              id: 73pnd
+            - relationships:
+                files:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/files/
+                      meta: {}
+                view_only_links:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/view_only_links/
+                      meta: {}
+                citation:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/citation/
+                      meta: {}
+                draft_registrations:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/draft_registrations/
+                      meta: {}
+                contributors:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/contributors/
+                      meta: {}
+                forks:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/forks/
+                      meta: {}
+                template_node:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/3mqkb/
+                      meta: {}
+                root:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/
+                      meta: {}
+                identifiers:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/identifiers/
+                      meta: {}
+                comments:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/comments/?filter%5Btarget%5D=mjasz
+                      meta: {}
+                registrations:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/registrations/
+                      meta: {}
+                node_links:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/node_links/
+                      meta: {}
+                linked_nodes:
+                  links:
+                    self:
+                      href: https://api.osf.io/v2/nodes/mjasz/relationships/linked_nodes/
+                      meta: {}
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/linked_nodes/
+                      meta: {}
+                wikis:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/wikis/
+                      meta: {}
+                affiliated_institutions:
+                  links:
+                    self:
+                      href: https://api.osf.io/v2/nodes/mjasz/relationships/institutions/
+                      meta: {}
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/institutions/
+                      meta: {}
+                children:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/children/
+                      meta: {}
+                preprints:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/preprints/
+                      meta: {}
+                logs:
+                  links:
+                    related:
+                      href: https://api.osf.io/v2/nodes/mjasz/logs/
+                      meta: {}
+              links:
+                self: https://api.osf.io/v2/nodes/mjasz/
+                html: https://osf.io/mjasz/
+              attributes:
+                category: project
+                fork: false
+                preprint: false
+                description:
+                current_user_permissions:
+                - read
+                date_modified: '2016-08-31T18:16:25.056000'
+                title: Replication of Winawer, Huk, & Boroditsky (Psychological Science, 2008)
+                collection: false
+                registration: false
+                date_created: '2014-09-23T18:58:54.915000'
+                current_user_can_comment: false
+                node_license:
+                public: true
+                tags: []
+              type: nodes
+              id: mjasz
             links:
-              first:
-              last:
-              prev:
-              next:
-              meta:
-                total: 1
-                per_page: 10
+              first: null
+              last: null
+              prev: null
+              next: null
+              meta: null
+              total: 3
+              per_page: 10
