--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 sudo: false
 language: node_js
-install:
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
+# install:
 #  - export DISPLAY=:99.0
 #  - sh -e /etc/init.d/xvfb start
 #  - npm i -g jshint
-  - npm install
+#  - yarn install
