--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 sudo: false
 language: node_js
+node_js:
+  - "6"
+  - "5"
+  - "4"
 cache:
   yarn: true
   directories:
     - node_modules
-
-# install:
-#  - export DISPLAY=:99.0
-#  - sh -e /etc/init.d/xvfb start
-#  - npm i -g jshint
-#  - yarn install
