--- a/swagger-spec/preprint_providers/definition.yaml
+++ b/swagger-spec/preprint_providers/definition.yaml
@@ -63,6 +63,10 @@ properties:
         type: string
         readOnly: true
         description: 'The preprint provider''s domain, if the provider is using a domain to for their preprint service.'
+      domain_redirect_enabled:
+        type: boolean
+        readOnly: true
+        description: 'Whether or not redirects are enabled for the provider''s domain.'
   relationships:
     type: object
     title: Relationships
